# ChangeLog for media-video/mpv
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*mpv-0_p20130715 (15 Jul 2013)

  15 Jul 2013; Nikoli <nikoli@lavabit.com> +mpv-0_p20130715.ebuild:
  new snapshot

  11 Jul 2013; Nikoli <nikoli@lavabit.com> mpv-9999.ebuild:
  keep build reproducible

  09 Jul 2013; Nikoli <nikoli@lavabit.com> mpv-9999.ebuild:
  do not add -g to CFLAGS

  09 Jul 2013; Nikoli <nikoli@lavabit.com> mpv-9999.ebuild:
  fix USE threads, install more DOCS, rm obsolete USE fbcon

  08 Jul 2013; Nikoli <nikoli@lavabit.com> mpv-9999.ebuild:
  upstream removed several configure options, fix USE deps, add USE threads,
  hide upstream CFLAGS warning, radio builds fine without oss, remove USE debug
  (it only changes CFLAGS now), build fails with ffmpeg-1, cosmetics

  05 Jul 2013; Nikoli <nikoli@lavabit.com> mpv-9999.ebuild:
  fix USE quvi

  04 Jul 2013; Nikoli <nikoli@lavabit.com> mpv-9999.ebuild, metadata.xml:
  upstream added libguess support

*mpv-0_p20130615 (15 Jun 2013)

  15 Jun 2013; Nikoli <nikoli@lavabit.com> -mpv-0_p20121201.ebuild,
  -mpv-0_p20130112.ebuild, +mpv-0_p20130615.ebuild:
  new snapshot, rm old

  14 Jun 2013; Nikoli <nikoli@lavabit.com> mpv-9999.ebuild:
  update wayland deps

  20 May 2013; Nikoli <nikoli@lavabit.com> mpv-9999.ebuild, metadata.xml:
  add vf-dlopen use flag, update

  28 Apr 2013; Nikoli <nikoli@lavabit.com> mpv-9999.ebuild:
  add USE wayland, xkbcommon is in portage

  27 Apr 2013; Nikoli <nikoli@lavabit.com> mpv-9999.ebuild:
  eapi5, cosmetics

  16 Apr 2013; Nikoli <nikoli@lavabit.com> mpv-0_p20130112.ebuild,
  mpv-9999.ebuild:
  update cdio dep

  15 Mar 2013; Nikoli <nikoli@lavabit.com> mpv-9999.ebuild:
  update libav dep

  11 Mar 2013; Nikoli <nikoli@lavabit.com> mpv-9999.ebuild:
  disable wayland

  08 Feb 2013; Nikoli <nikoli@lavabit.com> mpv-9999.ebuild:
  upstream removed *bsdbt848 from configure

  13 Jan 2013; Nikoli <nikoli@lavabit.com> mpv-9999.ebuild: