@@ -1,2 +1,1 @@
-DIST mpv-0_p20130615.tar.xz 1305588 SHA256 161e78584ff70460ecaa01e30eba666c58b26249f66e7521f1828dbcebe71c0e SHA512 b02f7d67375d412404d8b639c7a3a7ee6537b1a6e367a836a4ecd986d03e49dabfacc167a7e8bd1a1c5df3f2f98153b0d8c3404ad7ddde2bfc501dd938c62684 WHIRLPOOL 4771e29dba043048a2f59fa04ae09f61156b81429258b8af292894c133dbcb20921f56e5af88e9fcae09686dc7dfffad958e8130c8724e48659f8564f73bfabd
-DIST mpv-0_p20130715.tar.xz 1221104 SHA256 9aacae31549f052e7a5a4abb0a42e527c6ab0ba54a6c0b49f225d7b64eeb268e SHA512 c158322cc39d02a7f0fbdade6ec13ea180edbd93214122c2ae108844639ef3e47347666f4fbe71e024f98894c1f0f5441e1dac2a4ac37b430b96f8aa6cff0028 WHIRLPOOL f1dc2f564629e28c90996a0385d9d3515c0b1241c437dce736f614deb1421f615ec4e8c3d2c3a99ae9955775c4c0db8f7561971d2a2f13ac1e1bf913fca1f41c
+DIST mpv-0.1.4.tar.gz 1650525 SHA256 ec4a6093b33ed00d3f64a97e2eabbbf45b8e511929c98f3b8043f5effbe8cae7 SHA512 a462bba4f0f1f0394f040877e99d9dd1d5b26f031b5ee6db0cf3f00fb124527d65f2a6d9ef64e8e144c68a5cab92aeaaee75a6321f9024c505ae150f24def991 WHIRLPOOL 332e1449d2ebfdcc87313022df73606ed692e994719e49e5c0540a64ac4d5261ef1cfcef14cb432305d66b42bb695beba2b1e27110461e6259c6ae5f6af203bc
