@@ -12,7 +12,7 @@ inherit toolchain-funcs flag-o-matic multilib base
 DESCRIPTION="Video player based on MPlayer/mplayer2"
 HOMEPAGE="http://mpv.io/"
 [[ ${PV} == *9999* ]] || \
-SRC_URI="http://rion-overlay.googlecode.com/files/${P}.tar.xz"
+SRC_URI="https://github.com/mpv-player/mpv/archive/v${PV}.tar.gz -> ${P}.tar.gz"
 
 LICENSE="GPL-3"
 SLOT="0"
@@ -20,8 +20,8 @@ SLOT="0"
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux"
 IUSE="+alsa aqua bluray bs2b +cdio dvb +dvd +enca encode +iconv jack joystick
 jpeg ladspa lcms +libass libcaca libguess lirc mng +mp3 -openal +opengl oss
-portaudio +postproc pulseaudio pvr +quvi radio samba +shm +threads v4l vcd
-vdpau vf-dlopen wayland +X xinerama +xscreensaver +xv"
+portaudio +postproc pulseaudio pvr +quvi radio samba +shm +threads vaapi v4l
+vcd vdpau vf-dlopen wayland +X xinerama +xscreensaver +xv"
 
 REQUIRED_USE="
 	enca? ( iconv )
@@ -32,6 +32,7 @@ REQUIRED_USE="
 	pvr? ( v4l )
 	radio? ( v4l || ( alsa oss ) )
 	v4l? ( threads )
+	vaapi? ( X )
 	vdpau? ( X )
 	wayland? ( opengl )
 	xinerama? ( X )
@@ -41,8 +42,8 @@ REQUIRED_USE="
 
 RDEPEND+="
 	|| (
-		>=media-video/libav-9:=[encode?,threads?,vdpau?]
-		>=media-video/ffmpeg-1.2[encode?,threads?,vdpau?]
+		>=media-video/libav-9:=[encode?,threads?,vaapi?,vdpau?]
+		>=media-video/ffmpeg-1.2:0=[encode?,threads?,vaapi?,vdpau?]
 	)
 	sys-libs/ncurses
 	sys-libs/zlib
@@ -51,6 +52,7 @@ RDEPEND+="
 		x11-libs/libXxf86vm
 		opengl? ( virtual/opengl )
 		lcms? ( media-libs/lcms:2 )
+		vaapi? ( x11-libs/libva )
 		vdpau? ( x11-libs/libvdpau )
 		xinerama? ( x11-libs/libXinerama )
 		xscreensaver? ( x11-libs/libXScrnSaver )
@@ -86,7 +88,7 @@ RDEPEND+="
 	postproc? (
 		|| (
 			media-libs/libpostproc
-			media-video/ffmpeg
+			>=media-video/ffmpeg-1.2:0[encode?,threads?,vaapi?,vdpau?]
 		)
 	)
 	pulseaudio? ( media-sound/pulseaudio )
@@ -136,7 +138,8 @@ pkg_setup() {
 		ewarn "and makes them fail silently."
 	fi
 
-	einfo "For various format support you need to enable the support on your ffmpeg package:"
+	einfo "For additional format support you need to enable the support on your"
+	einfo "libavcodec/libavformat provider:"
 	einfo "    media-video/libav or media-video/ffmpeg"
 }
 
@@ -251,7 +254,7 @@ src_configure() {
 	# X enabled configuration #
 	###########################
 	use X || myconf+=" --disable-x11"
-	uses="vdpau wayland xinerama xv"
+	uses="vaapi vdpau wayland xinerama xv"
 	for i in ${uses}; do
 		use ${i} || myconf+=" --disable-${i}"
 	done
