@@ -2,6 +2,12 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*mpv-0.1.4 (31 Aug 2013)
+
+  31 Aug 2013; Nikoli <nikoli@lavabit.com> -mpv-0_p20130615.ebuild,
+  -mpv-0_p20130715.ebuild, +mpv-0.1.4.ebuild, mpv-9999.ebuild, metadata.xml:
+  add upstream release, USE vaapi, update ffmpeg dep
+
 *mpv-0_p20130715 (15 Jul 2013)
 
   15 Jul 2013; Nikoli <nikoli@lavabit.com> +mpv-0_p20130715.ebuild:
